<resources>
    <string name="CHANNEL_ID">ATTENDANCE_CHANNEL</string>
    <string name="app_name">ClassroomPlus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_classes">Add a new class</string>
    <string name="list_item_lab_or_seminar">Lab/Seminar</string>
    <string name="list_item_course">Course</string>
    <string name="no_class_name_error">Please provide a class name</string>
    <string name="no_valid_class_name_error">Please provide a valid class name</string>
    <string name="no_valid_duration">Please provide a valid duration time</string>
    <string name="no_time_error">Please provide a correct time for the class</string>
    <string name="no_room_error">Please provide a room for the class</string>
    <string name="ok_key">OK</string>
    <string name="no_classes_added_yet_message">No classes added yet</string>
    <string name="dialog_edit_item">Edit</string>
    <string name="dialog_delete_item">Delete</string>
    <string name="undo_key">Undo</string>
    <string name="unable_to_undo_message">Unable to redo</string>
    <string name="unable_to_edit_message">Something went wrong</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_update">Update</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_start">Start</string>
    <string name="minutes_hint">Minutes</string>
    <string name="class_name_hint">Class name</string>
    <string name="stop_scan_message">Stop Scan</string>
    <string name="start_scan_message">Start Scan</string>
    <string name="scanning_for_message">Scanning for %1$s</string>
    <string name="device_found_message">Device Found</string>
    <string name="try_again_message">Try again</string>
    <string name="Submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="refresh_classroom">Refresh Google Classroom Data</string>
    <string name="manage_attendance_active_attendance_message">Active Attendance</string>
    <string name="timetable_menu_back_up">Back Up</string>
    <string name="menu_refresh">Refresh Classroom</string>
    <string name="timetable_menu_restore">Restore</string>
    <string name="account_screen_email_label">Account email: </string>
    <string name="account_screen_name_label">Account name: </string>
    <string name="attendance_overview_all_attendances_label">All Attendances</string>
    <string name="channel_name">Attendance Notifications</string>
    <string name="channel_description">Notifications for attendance requests</string>
    <string name="icon_attribution">Icons made by Freepik from www.flaticon.com   </string>
    <string name="list_item_manage_attendance_name_label">Class :</string>
    <string name="attendance_no_attendance_label">No Active attendances</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="login_screen_welcome_message">Welcome to \n ClassroomPlus</string>
</resources>