<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ionutv.classroomplus.viewmodels.ManageAttendanceDialogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:background="#c0c0c0"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/minutes_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="20sp"
            android:afterTextChanged="@{(editable) -> viewModel.onCurrentDurationChanged(editable)}"
            android:text="@{viewModel.currentDuration}"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:afterTextChanged="@{(editable) -> viewModel.onCurrentClassNameChanged(editable)}"
                android:completionThreshold="1"
                android:hint="@string/class_name_hint"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@{viewModel.currentClassName}"
                android:textSize="20sp"
                android:dropDownAnchor="@id/name_input_layout"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnStart"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()-> viewModel.onCancelPressed()}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                android:onClick="@{()-> viewModel.onStartPressed()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    </LinearLayout>
</layout>
