<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ionutv.classroomplus.viewmodels.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AccountFragment">

        <TextView
            android:id="@+id/tvAccountEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_screen_email_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/layoutContent"
            app:layout_constraintEnd_toStartOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.onAccountEmail}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/layoutContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAccountEmail"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="jhon@doe.com" />

        <TextView
            android:id="@+id/tvAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_screen_name_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/layoutContent"
            app:layout_constraintStart_toStartOf="@id/tvAccountEmail"
            app:layout_constraintTop_toBottomOf="@id/tvAccountEmail" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.onAccountName}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/layoutContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvAccountName"
            app:layout_constraintTop_toBottomOf="@id/tvAccountEmail"
            tools:text="Jhon Doe" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutContent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/icon_attribution"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>